lagi menuju keberhasilan

--- a/public/forum.html
+++ b/public/forum.html
@@ -91,9 +91,7 @@
             placeholder="Contoh: 'Saya mengalami sakit perut setelah makan pedas...'"></textarea>
         </div>
         <div class="d-flex justify-content-between align-items-center">
-          <div class="text-muted small">
-            💡 Tips: Sebutkan gejala, durasi, dan riwayat terkait
-          </div>
+          <div class="text-muted small">Sebutkan gejala, durasi, dan riwayat terkait</div>
           <button id="submitQuestion" class="btn btn-primary btn-sm">Kirim Pertanyaan</button>
         </div>
       </div>
