--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
                 dan mendapatkan akses layanan medis tanpa harus keluar rumah.
                 </p>
                 <p class="text-secondary">
-                Bersama <strong>BeHealthy</strong>, hidup sehat kini menjadi lebih mudah dan praktis — cukup dengan satu klik.
+                Bersama <strong>BeHealthy</strong>, hidup sehat kini menjadi lebih mudah dan praktis cukup dengan satu klik.
                 </p>
                 <a href="#contact" class="btn btn-info text-white mt-3">Pelajari Lebih Lanjut</a>
             </div>
