--- a/public/kesehatan_mandiri/diabetes.html
+++ b/public/kesehatan_mandiri/diabetes.html
@@ -11,7 +11,7 @@
   <div class="container py-5">
     <div class="card shadow-sm mx-auto" style="max-width: 600px;">
       <div class="card-body">
-        <h2 class="text-center mb-4 text-primary">💉 Tes Risiko Diabetes (FINDRISC)</h2>
+        <h2 class="text-center mb-4 text-primary">💉 Tes Risiko Diabetes </h2>
 
         <form id="diabetesForm" class="mb-3">
           <div class="mb-3">
