--- a/public/kesehatan_mandiri/jantung.html
+++ b/public/kesehatan_mandiri/jantung.html
@@ -11,7 +11,7 @@
   <div class="container py-5">
     <div class="card shadow-sm mx-auto border-0" style="max-width: 600px;">
       <div class="card-body">
-        <h2 class="text-center text-danger mb-4">❤️ Tes Risiko Jantung (Framingham)</h2>
+        <h2 class="text-center text-danger mb-4">❤️ Tes Risiko Jantung </h2>
 
         <form id="heartForm" onsubmit="return false;">
           <div class="mb-3">
