--- a/public/toko/toko.html
+++ b/public/toko/toko.html
@@ -42,7 +42,7 @@
       <!-- Kartu produk di-render JS -->
     </div>
     <!-- Footer Keranjang Terapung (diisi oleh JS) -->
-    <div id="cartFooter" class="d-flex justify-content-center">
+    <div id="cartFooter" class="d-flex justify-content-end">
       <div class="d-flex align-items-center bg-white rounded p-3 shadow-lg p-3 mb-4">
           <div class="text-end me-3">
               <div><strong>Perkiraan Total</strong></div>
