--- a/public/kesehatan_mandiri/bmi.html
+++ b/public/kesehatan_mandiri/bmi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kalkulator BMI - BeHealthy</title>
-  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
@@ -36,7 +36,7 @@
 
         <!-- Tombol kembali -->
         <div class="text-center mt-4">
-          <button class="btn btn-outline-secondary w-100" onclick="window.location.href='/public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
+          <button class="btn btn-outline-secondary w-100" onclick="window.location.href='../public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
         </div>
       </div>
     </div>
@@ -89,6 +89,6 @@
     }
   </script>
 
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
