--- a/public/kesehatan_mandiri/depresi.html
+++ b/public/kesehatan_mandiri/depresi.html
@@ -108,7 +108,7 @@
 
         <div id="result" class="mt-4 text-center fw-semibold"></div>
 
-        <button class="btn btn-outline-secondary w-100 mt-3" onclick="window.location.href='/public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
+        <button class="btn btn-outline-secondary w-100 mt-3" onclick="window.location.href='../public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
       </div>
     </div>
   </div>
@@ -139,6 +139,6 @@
     }
   </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
