--- a/public/kesehatan_mandiri/jantung.html
+++ b/public/kesehatan_mandiri/jantung.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Risiko Jantung (Framingham) - BeHealthy</title>
-  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
@@ -91,7 +91,7 @@
         <div id="result" class="mt-4 text-center"></div>
 
         <div class="text-center mt-4">
-          <button class="btn btn-outline-dark w-100" onclick="window.location.href='/public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
+          <button class="btn btn-outline-dark w-100" onclick="window.location.href='../public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
         </div>
       </div>
     </div>
@@ -167,6 +167,6 @@
   }
   </script>
 
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
