--- a/public/toko/cart.html
+++ b/public/toko/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
                         <span class="fw-bold fs-5">Rp <span id="cartTotal">0</span></span>
                     </div>
                     <div class="d-grid gap-2">
-                        <button id="checkoutBtn" class="btn btn-accent">Lanjutkan ke Checkout</button>
+                        <button id="checkoutBtn" class="btn btn-success">Lanjutkan ke Checkout</button>
                         <button id="clearCartBtn" class="btn btn-outline-danger">Kosongkan Keranjang</button>
                     </div>
                     </div>
@@ -40,7 +40,7 @@
             </div>
         </div>
     </main>
-
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/routes/cart.js"></script>
   <script src="/routes/produk2.js"></script>
     
