--- a/public/toko/product.html
+++ b/public/toko/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
@@ -42,7 +42,7 @@
               <div><strong>Perkiraan Total</strong></div>
               <div class="fw-bold fs-5">Rp <span id="cartTotal">0</span></div>
           </div>
-          <button class="btn btn-accent" onclick="window.location.href='/public/toko/cart.html'">Lihat Keranjang</button>
+          <button class="btn btn-accent" onclick="window.location.href='../public/toko/cart.html'">Lihat Keranjang</button>
       </div>
     </div>
     </main>
