--- a/public/kesehatan_mandiri/diabetes.html
+++ b/public/kesehatan_mandiri/diabetes.html
@@ -83,10 +83,10 @@
             </select>
           </div>
 
-          <div class="d-grid gap-2">
+            <div class="d-grid gap-2">
             <button type="button" id="calculateBtn" class="btn btn-primary">Lihat Hasil</button>
             <button type="reset" class="btn btn-danger">Reset</button>
-            <button type="button" class="btn btn-outline-dark" onclick="window.location.href='../public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
+            <button type="button" class="btn btn-outline-dark" onclick="window.location.href='/kesehatan'">Kembali ke Beranda</button>
           </div>
         </form>
 
@@ -95,7 +95,7 @@
     </div>
   </div>
 
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
     document.getElementById("calculateBtn").addEventListener("click", calculateDiabetesRisk);
 
