--- a/public/kesehatan_mandiri/jantung.html
+++ b/public/kesehatan_mandiri/jantung.html
@@ -91,7 +91,7 @@
         <div id="result" class="mt-4 text-center"></div>
 
         <div class="text-center mt-4">
-          <button class="btn btn-outline-dark w-100" onclick="window.location.href='../public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
+          <button class="btn btn-outline-dark w-100" onclick="window.location.href='/kesehatan'">Kembali ke Beranda</button>
         </div>
       </div>
     </div>
@@ -167,6 +167,6 @@
   }
   </script>
 
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
