--- a/public/kesehatan_mandiri/kesehatan.html
+++ b/public/kesehatan_mandiri/kesehatan.html
@@ -9,28 +9,28 @@
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary-subtle fixed-top">
         <div class="container-fluid">
-            <img src="/public/foto/logo.png" alt="foto" class="image-fluid mx-5" style="width: 70px;" id="beranda"/>
+            <img src="/foto/logo.png" alt="foto" class="image-fluid mx-5" style="width: 70px;" id="beranda"/>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link me-4 fs-5" href="#beranda" onclick="window.location.href='/public/index.html'">Beranda</a>
+                        <a class="nav-link me-4 fs-5" href="#beranda" onclick="window.location.href='/'">Beranda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4 fs-5" href="#about" onclick="window.location.href='/public/index.html'">About</a>
+                        <a class="nav-link me-4 fs-5" href="#about" onclick="window.location.href='/'">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4 fs-5" href="#contact" onclick="window.location.href='/public/index.html'">Contact</a>
+                        <a class="nav-link me-4 fs-5" href="#contact" onclick="window.location.href='/'">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4 fs-5" href="#toko" onclick="window.location.href='/public/toko/toko.html'">Toko Obat</a>
+                        <a class="nav-link me-4 fs-5" href="#toko" onclick="window.location.href='/toko'">Toko Obat</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle fs-5" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Lainnya</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#konsultasi" onclick="window.location.href='/public/forum.html'">Forum Konsultasi</a></li>
+                            <li><a class="dropdown-item" href="#konsultasi" onclick="window.location.href='/forum'">Forum Konsultasi</a></li>
                             <li><a class="dropdown-item" href="#KesehatanMandiri">Cek Kesehatan Mandiri</a></li>
                         </ul>
                     </li>
@@ -124,7 +124,7 @@
     <small>@BeHealthy | Cek kesehatan mandiri dengan mudah</small>
   </footer>
 
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
