--- a/public/forum.html
+++ b/public/forum.html
@@ -104,7 +104,7 @@
   </footer>
 
   <!-- Bootstrap dan JS -->
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="diskusi.js"></script>
 </body>
 </html>
