--- a/public/kesehatan_mandiri/bmi.html
+++ b/public/kesehatan_mandiri/bmi.html
@@ -36,7 +36,7 @@
 
         <!-- Tombol kembali -->
         <div class="text-center mt-4">
-          <button class="btn btn-outline-secondary w-100" onclick="window.location.href='../public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
+            <button class="btn btn-outline-secondary w-100" onclick="window.location.href='/kesehatan'">Kembali ke Beranda</button>
         </div>
       </div>
     </div>
@@ -89,6 +89,6 @@
     }
   </script>
 
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
