--- a/public/kesehatan_mandiri/stress.html
+++ b/public/kesehatan_mandiri/stress.html
@@ -129,7 +129,7 @@
 
         <div id="result" class="mt-4 text-center fw-semibold"></div>
 
-        <button class="btn btn-outline-secondary w-100 mt-3" onclick="window.location.href='/public/kesehatan_mandiri/kesehatan.html'">Kembali ke Beranda</button>
+        <button class="btn btn-outline-secondary w-100 mt-3" onclick="window.location.href='/kesehatan'">Kembali ke Beranda</button>
       </div>
     </div>
   </div>
@@ -159,6 +159,6 @@
     }
   </script>
 
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
