--- a/public/toko/product.html
+++ b/public/toko/product.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
@@ -42,7 +42,7 @@
               <div><strong>Perkiraan Total</strong></div>
               <div class="fw-bold fs-5">Rp <span id="cartTotal">0</span></div>
           </div>
-          <button class="btn btn-accent" onclick="window.location.href='../public/toko/cart.html'">Lihat Keranjang</button>
+          <button class="btn btn-accent" onclick="window.location.href='/toko/cart.html'">Lihat Keranjang</button>
       </div>
     </div>
     </main>
@@ -53,7 +53,7 @@
       <small>© 2025 BeHealthy</small>
     </footer>
 
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/routes/produk.js"></script>
     <script src="/routes/produk2.js"></script>
 </body>
