--- a/public/toko/toko.html
+++ b/public/toko/toko.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-expand-lg sticky-top bg-primary-subtle navbar-dark py-1">
     <div class="container">
         <a href="javascript:history.back()" class="btn btn-outline-primary bi bi-arrow-90deg-lrigh">Kembali</a>
-        <a class="navbar-brand fw-bold" href="/public/index.html"><img src="/public/foto/logo.png" class="image-fluid mx-5" style="width: 70px;" alt="beranda"></a>
+        <a class="navbar-brand fw-bold" href="/"><img src="/foto/logo.png" class="image-fluid mx-5" style="width: 70px;" alt="beranda"></a>
         <div class="d-flex ms-auto w-50">
             <input id="searchInput" class="form-control" type="search" placeholder="Cari obat, vitamin, atau suplemen...">
         </div>
@@ -58,8 +58,8 @@
     <small>@BeHealthy</small>
   </footer>
 
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/routes/toko.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/routes/produk2.js"></script>
+  <script src="/routes/toko.js"></script>
 </body>
 </html>
